[package]
name = "dbs-uhttp"
version = "0.3.0"
license = "Apache-2.0"
authors = [
    "Amazon Firecracker team <firecracker-devel@amazon.com>",
    "Alibaba Dragonball Team"
]
description = "A lightweight implementation of HTTP/1.0 and HTTP/1.1"
repository = "https://github.com/openanolis/dbs-uhttp"
edition = "2018"

[dependencies]
libc = ">=0.2.39"
mio = { version = "0.8.0", features = ["os-ext", "os-poll"]}

[dev-dependencies]
vmm-sys-util = ">=0.6.1"
